--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
-.App {
-  text-align: center;
+button {
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,24 +16,34 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 10px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.QR-Section {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.QR-Button {
+  padding: 20px 10px;
+  font-size: 24px;
+  color: #ffffff;
+  background-color: #4242fc;
+}
+
+.QR-Button:hover {
+  background-color: #1212ca;
 }
